fixed alignment issues in mobile navbar links

--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,9 @@
 body{
     font-family: "Montserrat";
 }
+a {
+	text-align: center;
+}
 .header{
     font-size: 30px;
 }
